--- a/myleafletmap1.html
+++ b/myleafletmap1.html
@@ -20,8 +20,9 @@
             L.marker([15.029305, 120.692383]).addTo(map)
                 .bindPopup('Hello from San Fernando!') 
                 .openPopup();
+                L.geoJSON(sanfernando).addTo(map)
             </script>
         </script>
-        This is not as hard as I thought.
+        San Fernando is a city in the province of Pampanga in the Philippines. Pampanga is known for its culinary work, and it is widely known as the culinary capital of the Philippines!
     </body>
 </html>
